Bug 1365674 - stylo: Simulate compute value failure for dom/animation mochitests. r=hiro

MozReview-Commit-ID: 8flMLuW2vZP